syntax = "proto3";
package employee.service;

option java_multiple_files = true;
option java_package = "dev.ngdangkiet.dkmicroservices.employee.service";
option java_outer_classname = "EmployeeServiceAPI";

import "google/protobuf/wrappers.proto";
import "employee-service/shared.proto";

service EmployeeService {
  rpc createOrUpdateEmployee (PEmployee) returns (google.protobuf.Int64Value);
  rpc getEmployeeById (google.protobuf.Int64Value) returns (PEmployeeResponse);
}